VPP3-225 fixed up the grid spacing

--- a/src/styles/components/attendance-cell.scss
+++ b/src/styles/components/attendance-cell.scss
@@ -1,5 +1,5 @@
 .attendanceCell {
-  margin: 12px 0;
+  margin: 10px 0;
 
   &__spot-name {
     font-size: 28px;
