--- a/src/styles/components/class-and-attendance-container.scss
+++ b/src/styles/components/class-and-attendance-container.scss
@@ -1,7 +1,5 @@
 .classAndAttendanceContainer {
   display: flex;
-  height: 50%;
-  min-height: 50%;
   width: 75%;
   padding: 32px;
   align-self: stretch;
@@ -12,9 +10,13 @@
 
   &--first {
     background-color: $color-green-1;
+    height: 55%;
+    min-height: 55%;
   }
 
   &--second {
     background-color: $color-light-grey;
+    height: 38%;
+    min-height: 38%;
   }
 }
