--- a/src/styles/components/focus-schedule-column.scss
+++ b/src/styles/components/focus-schedule-column.scss
@@ -5,7 +5,7 @@
   padding: 24px;
 
   position: absolute;
-  width: 20%;
+  width: 22%;
   height: 100%;
   right: 0;
 
