--- a/src/styles/components/pick-a-spot-grid.scss
+++ b/src/styles/components/pick-a-spot-grid.scss
@@ -9,8 +9,6 @@
   }
 
   &__class-and-attendance-tab-and-timer-container {
-    height: 90%;
-    min-height: 90%;
     display: flex;
     flex-direction: column;
     width: 80%;
