--- a/src/styles/components/timer-cell.scss
+++ b/src/styles/components/timer-cell.scss
@@ -1,6 +1,6 @@
 .timerCell {
-  width: 78%;
-  height: 112px;
+  width: 76%;
+  height: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
